# ROS2-Policy-Inference-Server

./: .gitignore  README.md
robomimic_policy_interfaces/: CMakeLists.txt  package.xml
robomimic_policy_interfaces/srv/: PolicyInfer.srv
robomimic_policy_srv/: package.xml  setup.cfg  setup.py
robomimic_policy_srv/robomimic_policy_srv/: policy_runner.py  policy_service_node.py  test_policy_client.py  使用方式.txt
