<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robomimic_policy_srv</name>
  <version>0.0.0</version>
  <description>Robomimic policy ROS2 service</description>
  <maintainer email="longann890621@gmail.com">robertlo</maintainer>
  <license>Apache-2.0</license>

  <!-- build tools -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- runtime deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robomimic_policy_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
